[options]
python_requires = >= 3.7

[flake8]
max-line-length = 120
enable-extensions = M511
exclude = src/pythie_serving/tensorflow_proto/
max-complexity = 10
# F401: imported but unused
per-file-ignores=__init__.py:F401

[mypy]
python_version = 3.8
ignore_missing_imports = True
files = src/
plugins = numpy.typing.mypy_plugin

[isort]
profile = black
