[options]
python_requires = >= 3.10

[flake8]
max-line-length = 120
# Ignoring E203 as it conflicts with black: https://github.com/psf/black/issues/315#issuecomment-395457972
ignore = E203
enable-extensions = M511
exclude = src/pythie_serving/tensorflow_proto/,build
max-complexity = 10
# F401: imported but unused
per-file-ignores=__init__.py:F401

[mypy]
python_version = 3.10
ignore_missing_imports = True
files = src/
plugins = numpy.typing.mypy_plugin

[isort]
profile = black
skip_glob=src/pythie_serving/tensorflow_proto/*
